# pong-cpp

./: CMakeLists.txt  build.bat
src/: entities.cpp  entities.h  game.cpp  game.h  math.cpp  math.h  pong.cpp
